stuck on a bug smh

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -132,6 +132,7 @@ body {
 
 .error {
     color: red;
+    text-align: center;
 }
 
 
